[package]
name = "busycrate"
version = "0.1.0"
authors = ["Ian Boll <iangboll@vt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
nix = "0.17.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
